default/objects/GFNI_Settings__c/GFNI_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>General settings for GFN Integration and GFN Dashboard</description>
    <label>GFNI Settings</label>
</CustomObject>