default/objects/GFNI_Settings__c/fields/API_version__c.field-meta.xml
<CustomField>
    <fullName>API_version__c</fullName>
    <label>API version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>