default/objects/GFNI_Settings__c/fields/Client_system__c.field-meta.xml
<CustomField>
    <fullName>Client_system__c</fullName>
    <label>Client system</label>
    <length>5</length>
    <type>Text</type>
</CustomField>