default/objects/GFNI_Settings__c/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <label>Culture</label>
    <length>10</length>
    <type>Text</type>
</CustomField>