default/objects/GFNI_Settings__c/fields/GFN_System_base_URL__c.field-meta.xml
<CustomField>
    <fullName>GFN_System_base_URL__c</fullName>
    <description>GFN Landing pages base URL</description>
    <inlineHelpText>The person that access the landing page functionality will need to have been set up as a GFN user with access to the Company the client resides in and access, either read-write or read-only, to the page being landed on.</inlineHelpText>
    <label>GFN System base URL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>