default/objects/GFNI_Settings__c/fields/IsForRobot__c.field-meta.xml
<CustomField>
    <fullName>IsForRobot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is for Robot</label>
    <type>Checkbox</type>
</CustomField>