default/objects/GFNI_Settings__c/fields/Prod_endpoint__c.field-meta.xml
<CustomField>
    <fullName>Prod_endpoint__c</fullName>
    <label>Prod endpoint</label>
    <length>150</length>
    <type>Text</type>
</CustomField>