default/objects/GFNI_Settings__c/fields/Test_endpoint__c.field-meta.xml
<CustomField>
    <fullName>Test_endpoint__c</fullName>
    <label>Test endpoint</label>
    <length>150</length>
    <type>Text</type>
</CustomField>