default/objects/GFNI_Settings__c/fields/Test_GFN_System_base_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_GFN_System_base_URL__c</fullName>
    <label>Test GFN System base URL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>