default/objects/GFNI_Settings__c/fields/Test_mode__c.field-meta.xml
<CustomField>
    <fullName>Test_mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test mode</label>
    <type>Checkbox</type>
</CustomField>