default/objects/GFNI_Settings__c/fields/Test_support_email__c.field-meta.xml
<CustomField>
    <fullName>Test_support_email__c</fullName>
    <label>Test support email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>