default/objects/GFNI_Settings__c/fields/x_ibm_client_secret__c.field-meta.xml
<CustomField>
    <fullName>x_ibm_client_secret__c</fullName>
    <label>x_ibm_client_secret</label>
    <length>50</length>
    <type>Text</type>
</CustomField>